<resources>
    <string name="app_name">EconoMe</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="wallet">Wallet</string>
    <string name="add">Add</string>
    <string name="report">Report</string>
    <string name="person">Person</string>
    <string name="empty">Empty</string>
    <string name="add_item">Add Expense</string>
    <string name="add_expense">Add Expense</string>
    <string name="balance">Total Balance</string>
    <string name="balance_amount">Rp10.000</string>
    <string name="income">Rp15.000</string>
    <string name="expense">Rp5.000</string>
    <string name="income_title">Income</string>
    <string name="expense_title">Expense</string>
    <string name="transactions_title">Transactions</string>
    <string name="label">Label</string>
    <string name="amount">Amount</string>
    <string name="description">Description</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="add_income">Add Income</string>
    <string name="category_icon">Icon Category</string>
    <string name="statistics">Statistics</string>
    <string name="profile">Profile</string>
    <string name="icon">Icon Category</string>
    <string name="item_count">%d items</string>
    <string name="total_expense">Total Expense\n Rp %.0f</string>
    <string name="top_spending">Top Spending</string>
    <string name="top_spending_details">Top Spending Details</string>

    <string name="welcome">Welcome to EconoMe!</string>
    <string name="desc_welcome">Plan and manage your money with us!</string>
    <string name="desc_signup">Please sign up first</string>
    <string name="signfree">Sign Up for Free</string>
    <string name="signin">Sign In</string>
    <string name="signup">Sign Up</string>
    <string name="errormail">Please enter a valid email address</string>
    <string name="errorpass">Password must be at least 8 characters</string>
    <string name="messageregist">Already have an account?</string>
    <string name="messagelogin">Dont have an account yet?</string>
    <string name="email">Enter your Email</string>
    <string name="name">Enter your Name</string>
    <string name="major">Enter your Major</string>
    <string name="age">Enter your Age</string>
    <string name="gender">Enter your Gender</string>
    <string name="editpage">Edit Profile</string>
    <string name="editemail">Enter your New Email</string>
    <string name="editname">Enter your New Name</string>
    <string name="editmajor">Enter your New Major</string>
    <string name="editage">Enter your New Age</string>
    <string name="editgender">Enter your New Gender</string>
    <string name="password">Enter your Password</string>
    <string name="emptymail">Email cannot be empty</string>
    <string name="emptyname">Name cannot be empty</string>
    <string name="emptypass">Password cannot be empty</string>
    <string name="emptygender">Gender cannot be empty</string>
    <string name="emptymajor">Major cannot be empty</string>
    <string name="emptyage">Age cannot be empty</string>
    <string name="invalidage">Age invalid</string>
    <string name="logout">Are you sure you want to log out?</string>
    <string name="wait">Please wait...</string>
    <string name="permit">Permission denied</string>
    <string name="login">Login successful</string>
    <string name="regist">Registration successful</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="transaction">Transaction</string>
    <string name="statistics_title">Statistics</string>
    <string name="greeting">Hello, User!</string>
    <string name="null_handling_message">No transactions yet</string>
    <string name="username">Enter your username</string>
    <string name="emptyusername">Please enter a username</string>


    <string-array name="time_range">
        <item>All Time</item>
        <item>Last 7 Days</item>
        <item>Last 30 Days</item>
    </string-array>

    <string-array name="categories">
        <item>All Categories</item>
        <item>Entertainment</item>
        <item>Food</item>
        <item>Health</item>
        <item>Housing</item>
        <item>Other</item>
        <item>Transportation</item>
    </string-array>
</resources>